adding sentiment analysis of reviews

--- a/reviews-sentiment-analysis.ipynb
+++ b/reviews-sentiment-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "api_key = os.environ.get(\"COHERE_API_KEY\"),\n",
     "\n",
     "# setting up the cohere client\n",
-    "co = cohere.Client(api_key)\n",
-    "co = cohere.Client('pFiWDGewx5KPUTE2Oi3y5AaTVOiE7isGgICLBafG')"
+    "co = cohere.Client(api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
